--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
 
     <color name="white">#FFFFFF</color>
 
-    <color name="splash_start">#e1ead6</color>
-    <color name="splash_end">#f3f7ef</color>
+    <color name="splash_start">#2f7cc2</color>
+    <color name="splash_end">#124aa1</color>
 
     <color name="toolbar_fill_start">#2f7cc2</color>
     <color name="toolbar_fill_end">#124aa1</color>
