--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:id="@+id/logo_container_FSI"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/login_logo_height"
         android:background="@drawable/bg_toolbar_sign_in">
         <ImageView
             android:layout_width="wrap_content"
