--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="margin_32">32dp</dimen>
 
     <dimen name="corner_radius_4">4dp</dimen>
+
+    <dimen name="login_logo_height">200dp</dimen>
 </resources>
