--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -28,13 +28,13 @@
         android:layout_marginTop="@dimen/margin_32">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_email_container_FSI"
+            android:id="@+id/til_user_name_container_FSI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/login_accent_color">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/tiet_email_FSI"
+                android:id="@+id/tiet_user_name_FSI"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="@dimen/margin_16"
@@ -66,7 +66,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_sign_in_FSI"
+        android:id="@+id/btn_login_FSI"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_button_login"
