--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,10 +7,15 @@
     <dimen name="margin_16">16dp</dimen>
     <dimen name="margin_32">32dp</dimen>
 
+    <dimen name="text_size_14">14sp</dimen>
     <dimen name="text_size_16">16sp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
     <dimen name="text_size_20">20sp</dimen>
 
     <dimen name="corner_radius_4">4dp</dimen>
 
     <dimen name="login_logo_height">200dp</dimen>
+
+    <dimen name="poster_width">100dp</dimen>
+    <dimen name="poster_height">150dp</dimen>
 </resources>
