--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:minWidth="@dimen/margin_300"
-                android:padding="@dimen/margin_16">
+                android:paddingBottom="@dimen/margin_16"
+                android:paddingTop="@dimen/margin_16">
 
     <TextView
         android:id="@+id/tvTitle_DS"
@@ -15,7 +16,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingEnd="@dimen/margin_24"
         android:paddingStart="@dimen/margin_24"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size_20"
         android:textStyle="normal"
         tools:text="GPForum"/>
@@ -24,10 +25,12 @@
         android:id="@+id/til_search_container_DS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTitle_DS"
         android:paddingEnd="@dimen/margin_24"
         android:paddingStart="@dimen/margin_24"
-        android:textColorHint="@color/colorAccent"
-        android:layout_below="@+id/tvTitle_DS">
+        android:textColorHint="@color/white"
+        app:errorTextAppearance="@style/ErrorDialogTextInputLayout"
+        android:theme="@style/DialogTextInputLayout">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/tiet_search_request_DS"
@@ -35,7 +38,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/dialog_search"
             android:inputType="text"
-            android:maxLength="20"/>
+            android:maxLength="20"
+            android:theme="@style/DialogTextInputEditText"
+            />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -43,11 +48,11 @@
         android:id="@+id/ll_DS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/til_search_container_DS"
         android:gravity="end|center_vertical"
         android:orientation="horizontal"
         android:paddingEnd="@dimen/margin_8"
-        android:paddingStart="@dimen/margin_8"
-        android:layout_below="@+id/til_search_container_DS">
+        android:paddingStart="@dimen/margin_8">
 
         <TextView
             android:id="@+id/tvPositive_DS"
@@ -57,9 +62,9 @@
             android:padding="@dimen/margin_16"
             android:text="@string/button_ok"
             android:textAllCaps="true"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_size_16"
-            android:textStyle="normal"/>
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvNegative_DS"
@@ -69,9 +74,9 @@
             android:padding="@dimen/margin_16"
             android:text="@string/button_cancel"
             android:textAllCaps="true"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_size_16"
-            android:textStyle="normal"/>
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -79,9 +84,6 @@
         android:id="@+id/rv_DS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_DS"
-        android:paddingEnd="@dimen/margin_24"
-        android:paddingStart="@dimen/margin_24"
-        android:padding="@dimen/margin_4"/>
+        android:layout_below="@id/ll_DS"/>
 
 </RelativeLayout>
