add click listener for MoviesByGenreAdapter

--- a/app/src/main/res/layout/item_movies_by_genre.xml
+++ b/app/src/main/res/layout/item_movies_by_genre.xml
@@ -36,7 +36,7 @@
 
         <TextView
             android:id="@+id/tv_overview_IMBG"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="An Amazon princess comes to the world of Man to become the greatest"
             android:layout_below="@+id/tv_title_IMBG"
