--- a/app/src/main/res/layout/fragment_list_details.xml
+++ b/app/src/main/res/layout/fragment_list_details.xml
@@ -6,6 +6,17 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/tv_delete_FLD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/margin_4"
+        android:layout_marginStart="@dimen/margin_16"
+        android:text="@string/text_delete"
+        android:textSize="@dimen/text_size_16"
+        android:textColor="@color/colorAccent"
+        android:textStyle="italic"/>
+
+    <TextView
         android:id="@+id/tv_count_FLD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
