--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,9 @@
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
 
+    <style name="PopupDeleteStyle" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
 </resources>
