added the possibility to view movie details

--- a/app/src/main/res/layout/fragment_details_movie.xml
+++ b/app/src/main/res/layout/fragment_details_movie.xml
@@ -1,215 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_4"
-    android:layout_marginEnd="@dimen/margin_16"
-    android:layout_marginStart="@dimen/margin_16"
-    android:layout_marginTop="@dimen/margin_4"
-    app:cardCornerRadius="@dimen/margin_3">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_FDM"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/margin_8">
-
-            <ImageView
-                android:id="@+id/iv_poster_FDM"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/poster_details_height"
-                tools:src="@drawable/ic_acc_logo"/>
-
-            <TextView
-                android:id="@+id/tv_title_FDM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/iv_poster_FDM"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_size_20"
-                android:textStyle="bold"
-                tools:text="Title"
-                />
-
-            <TextView
-                android:id="@+id/tv_tagline_FDM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_title_FDM"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_size_18"
-                android:textStyle="italic"
-                tools:text="Power. Grace. Wisdom. Wonder."
-                />
-
-            <TextView
-                android:id="@+id/tv_overview_FDM"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_tagline_FDM"
-                android:layout_marginTop="@dimen/margin_4"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_size_16"
-                tools:text="An Amazon princess comes to the world of Man to become the greatest"/>
-
-            <LinearLayout
-                android:id="@+id/ll_genres_container_FDM"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_overview_FDM"
-                android:layout_marginTop="@dimen/margin_4"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_genres_static_FDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Genres:"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/tv_genres_FDM"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_6"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    tools:text="Action \nAdventure"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_companies_container_FDM"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/ll_genres_container_FDM"
-                android:layout_marginTop="@dimen/margin_4"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_companies_static_FDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Production Companies:"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/tv_companies_FDM"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_6"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    tools:text="Warner Bros. \nCruel  Unusual Films"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_countries_container_FDM"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/ll_companies_container_FDM"
-                android:layout_marginTop="@dimen/margin_4"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_countries_static_FDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Production Countries:"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/tv_countries_FDM"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_6"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    tools:text="United States of America \nCanada"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_release_date_FDM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/ll_countries_container_FDM"
-                android:layout_marginTop="@dimen/margin_10"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_size_16"
-                tools:text="Release date: 2017-05-30"
-                />
-
-            <TextView
-                android:id="@+id/tv_budget_FDM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/tv_release_date_FDM"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_size_16"
-                tools:text="Budget: 120000000"
-                />
-
-            <TextView
-                android:id="@+id/tv_revenue_FDM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/tv_budget_FDM"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_size_16"
-                tools:text="Revenue: 573495580"
-                />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/tv_revenue_FDM"
-                android:layout_marginTop="@dimen/margin_10"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_vote_FDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_vote"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    tools:text="7.1"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_vote_count_FDM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_vote_person"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/text_size_16"
-                    tools:text="997"
-                    />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </ScrollView>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
