fix details movie screen

--- a/app/src/main/res/layout/item_details_movie.xml
+++ b/app/src/main/res/layout/item_details_movie.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/rl_container_FDM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_10">
