--- a/app/src/main/res/layout/fragment_search_movie.xml
+++ b/app/src/main/res/layout/fragment_search_movie.xml
@@ -8,14 +8,14 @@
     android:layout_marginBottom="@dimen/margin_16">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_search_container_FSP"
+        android:id="@+id/til_search_container_FSM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingEnd="@dimen/margin_16"
         android:paddingStart="@dimen/margin_16">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/tiet_search_request_FSP"
+            android:id="@+id/tiet_search_request_FSM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialog_search"
@@ -26,17 +26,17 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_container_FSP"
+        android:id="@+id/cv_container_FSM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/til_search_container_FSP"
+        android:layout_below="@+id/til_search_container_FSM"
         android:layout_marginEnd="@dimen/margin_16"
         android:layout_marginTop="@dimen/margin_6"
         app:cardCornerRadius="@dimen/corner_radius_4">
 
         <TextView
-            android:id="@+id/tv_search_FSP"
+            android:id="@+id/tv_search_FSM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_8"
@@ -48,10 +48,10 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_FSP"
+        android:id="@+id/rv_FSM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/cv_container_FSP"
+        android:layout_below="@id/cv_container_FSM"
         android:layout_marginTop="@dimen/margin_6"/>
 
 </RelativeLayout>
