--- a/app/src/main/res/layout/main_header.xml
+++ b/app/src/main/res/layout/main_header.xml
@@ -6,6 +6,11 @@
     android:background="@drawable/bg_splash"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/main_logo"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
