--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="red">#D50000</color>
     <color name="dialog_error">#E0E0E0</color>
 
     <color name="splash_start">#2f7cc2</color>
