--- a/app/src/main/res/layout/main_header.xml
+++ b/app/src/main/res/layout/main_header.xml
@@ -9,6 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="@dimen/margin_10"
         android:src="@drawable/main_logo"/>
 
     <TextView
