--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -8,6 +8,7 @@
     android:layout_height="?attr/actionBarSize"
     android:minHeight="?attr/actionBarSize"
     android:background="@color/colorPrimary"
+    app:theme="@style/ToolBarStyle"
     app:contentInsetEnd="0dp"
     app:contentInsetStart="8dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
