--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="ToolBarStyle" parent="Theme.AppCompat">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+    </style>
+
     <style name="DialogTextInputLayout" parent="Widget.Design.TextInputLayout">
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/white</item>
@@ -38,6 +44,7 @@
     <style name="PopupDeleteStyle" parent="Widget.AppCompat.PopupMenu">
         <item name="android:layout_marginStart">12dp</item>
         <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:background">@color/white</item>
     </style>
 
 </resources>
